Rename BetterMath to BetterMaths + refactoring

--- a/src/package/pyproject.toml
+++ b/src/package/pyproject.toml
@@ -29,5 +29,5 @@ keywords = ["math", "mathematics", "better", "easier", "simple", "easy"]
 
 [project.urls]
 Homepage = "https://dhaiven.github.io/"
-Documentation = "https://dhaiven.github.io/BetterMath/wiki"
-Repository = "https://github.com/Dhaiven/BetterMath"
+Documentation = "https://dhaiven.github.io/BetterMaths/wiki"
+Repository = "https://github.com/Dhaiven/BetterMaths"
