End of optimisation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,12 @@ authors = [
 ]
 description = "Python mathematics made easier"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.4"
 classifiers = [
+    "Programming Language :: Python :: 3.4",
+    "Programming Language :: Python :: 3.5",
+    "Programming Language :: Python :: 3.6",
+    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
